--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>Olivier Goulet</title>
     </head>
     <body>
-        <div id="app-root"></div>
+        <div id="root"></div>
     </body>
 </html>
