--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
     <head lang="en">
         <title>Olivier Goulet</title>
+        <link href="/dist/output.css" rel="stylesheet">
     </head>
     <body>
-        <div id="root"></div>
+        <div class="bg-red-500" id="root"></div>
     </body>
 </html>
