--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Olivier Goulet</title>
         <link href="/dist/output.css" rel="stylesheet">
     </head>
-    <body>
-        <div class="bg-red-500" id="root"></div>
+    <body class="bg-gray-800">
+        <div class="" id="root"></div>
     </body>
 </html>
