--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head lang="en">
         <title>Olivier Goulet</title>
         <link href="/dist/output.css" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body class="bg-gray-800">
         <div class="" id="root"></div>
