--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
     <head lang="en">
         <title>Olivier Goulet</title>
-        <link href="/dist/output.css" rel="stylesheet">
+        <link href="styles.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
-    <body class="bg-gray-800">
+    <body class="bg-gray-800 scroll-smooth">
         <div class="" id="root"></div>
     </body>
 </html>
